2011-02-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSInfoPanel.m,
	* Source/GSTextStorage.m,
	* Source/GSThemeInspector.m,
	* Source/NSBrowser.m,
	* Source/NSImage.m,
	* Source/NSMenuView.m,
	* Source/NSPageLayout.m,
	* Source/NSSpellChecker.m,
	* Source/NSStringDrawing.m,
	* Source/NSTableHeaderView.m,
	* Source/NSTableView.m,
	* Source/NSWindow.m,
	* Tools/gclose.m,
	* Tools/make_services.m: Remove dead assignments found by static code analysis.

2011-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSEvent.m: Avoid unneccessary creation/destruction of NSDate
	instances during periodic events.

2011-02-08 Riccardo Mottola <rm@gnu.org>

	* Source/NSBitmapImageRep+PNG.m:
	Tweak png.h header order to avoid problems on some systems.

2011-02-08 Riccardo Mottola <rm@gnu.org>

	* Source/NSBitmapImageRep+PNG.m:
	Cleaned up includes so that compilation without PNG works again.

	* configure.ac:
	Use libpng-config to determine the correct includes and libraries.

	* configure: regenerated.

2011-02-07 Fred Kiefer <FredKiefer@gmx.de>

	* Printing/*: Clean up all the header includes.

2011-01-31 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSBrowser.h,
	* Source/NSBrowser.m: Add method -scrollRowToVisible:inColumn:

2011-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+PNG.m (_initBitmapFromPNG:): Use
	function to check whether gamma is valid.
	Patch by Thomas Klausner.

2011-01-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSApplication.m (-terminate:): Send message to the
	document controller to let the user review any unsaved changes in
	its managed documents before asking the application delegate
	whether its okay to terminate the application. This matches
	Cocoa's documented and implemented behavior.

	* Source/NSApplication.m (-terminate): Move call to GSRemoveIcon
	from here ...
	* Source/NSApplication.m (-replyToApplicationShouldTerminate:):
	... to here to ensure that the app icon is removed from the icon